--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <div>
                 <h1>Start your journey as <br> Influencer</h1>
             </div>
-            <p>In 2022 my mission it to Work hard! and gain experince and by using all those things to become a web
-                developer.As a CS student i know many things but i am just failing to execute my learnings.So in this
-                year i will try my best to execute my plan if Allah Helps me.
+            <p>Influencing is a intalectual workd known by us!.Recently we are evolving that social media worker or
+                content creators Influencing our society a lot!.They have huge fan follower.They follow and like them
+                very much. And their popularity is increasing day by day.Influencer need lots of gears to make vlog!.So
+                this is only for them!.
             </p>
             <div class="head-button">
                 <a href="">Preebook Now</a>
@@ -34,12 +35,12 @@
             <img src="images/main-camera.png">
         </div>
     </header>
-
-
+    <!-----------------Header Section End Here ----------->
 
 
     <main>
 
+        <!---------------------Popular Collection Start From Here------------->
         <section class="container">
             <h2 class="section-title">Popular Collection</h2>
             <div class="collections">
@@ -52,11 +53,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-starf"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -74,11 +75,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -96,11 +97,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -117,11 +118,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -139,11 +140,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -161,11 +162,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -183,11 +184,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -205,11 +206,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -227,11 +228,11 @@
                         <p class="collection-price">$125</p>
                         <div class="collection-info">
                             <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star empty"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
                                 <span>4.5</span>
                             </div>
 
@@ -241,20 +242,24 @@
                     </div>
                 </div>
             </div>
-            <div id="top-trend-button">
-                <a href="">Order Now</a>
+            <div id="see-more-link">
+                <a href="">See more</a>
                 <span><i class="fas fa-arrow-right"></i></span>
             </div>
 
         </section>
 
+        <!---------------Popular collection End here------------>
+
+
+        <!----------Top trend Container start here ----------->
         <section class="top-trend-container">
             <div class="top-trend-half-width">
                 <div>
                     <h1>Top Trending Product <span id="orange-color">!</span></h1>
                 </div>
                 <p>This is the most trending Influencer Prouct rigt now!.We have a vast stock of this
-                  Products.Containing some awesome feature that will help in Influencer job.
+                    Products.Containing some awesome feature that will help in Influencer job.
                 </p>
 
                 <div id="top-trend-button">
@@ -266,10 +271,11 @@
                 <img src="images/camera.png">
             </div>
         </section>
-
+        <!---------------Top Trend container End Here -------------->
     </main>
 
 
+    <!---------------Footer Container Start from here--------->
     <footer>
         <section class="footer-section">
 
@@ -286,7 +292,7 @@
 
 
     </footer>
-
+    <!----------------Footer Container End here -------------->
 
 
 </body>
